--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "ayoflex": "^1.0.1",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
