--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "ayoflex": "^1.0.1",
+    "mitt": "^3.0.0",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
